--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="checklistItemTextSize">20sp</dimen>
+    <dimen name="checklistItemPadding">8dp</dimen>
+    <dimen name="checklistItemEditPadding">8dp</dimen>
 </resources>
