--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -20,8 +20,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/settingsCopyright"
         android:id="@+id/textViewCopyright"
-        android:layout_below="@+id/textViewChecklister"
-        android:layout_centerHorizontal="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="42dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,7 +30,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/app_name"
         android:id="@+id/textViewChecklister"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/textViewCopyright"
         android:layout_centerHorizontal="true"/>
 
     <Button
