--- a/app/src/main/res/layout/checklist_item.xml
+++ b/app/src/main/res/layout/checklist_item.xml
@@ -1,42 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <CheckBox
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/checklistItemTextSize"
-        android:padding="@dimen/checklistItemPadding"
-        android:layout_weight="1"
-        android:id="@+id/checklistItem"
-        android:onClick="toggleChecked"
-        android:text="Test"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/checklistWrapper"
+        >
+        <CheckBox
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/checklistItemTextSize"
+            android:padding="@dimen/checklistItemPadding"
+            android:layout_weight="1"
+            android:id="@+id/checklistItem"
+            android:onClick="toggleChecked"
+            android:text="Test"/>
 
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:hint=""
-        android:layout_weight="1"
-        android:id="@+id/checklistEdit"/>
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:hint=""
+            android:layout_weight="1"
+            android:id="@+id/checklistEdit"/>
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/checklistEditButton"
-        android:padding="@dimen/checklistItemEditPadding"
-        android:src="@android:drawable/ic_menu_edit"
-        android:onClick="editCheckbox"
-        />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/checklistEditButton"
+            android:padding="@dimen/checklistItemEditPadding"
+            android:src="@android:drawable/ic_menu_edit"
+            android:onClick="editCheckbox"
+            />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/checklistChildsButton"
-        android:padding="@dimen/checklistItemChildsPadding"
-        android:src="@android:drawable/ic_menu_view"
-        android:onClick="viewChilds"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/checklistChildsButton"
+            android:padding="@dimen/checklistItemChildsPadding"
+            android:src="@android:drawable/ic_menu_view"
+            android:onClick="viewChilds"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
